--- a/anyproxy/examples/conf/domain_1444.conf
+++ b/anyproxy/examples/conf/domain_1444.conf
@@ -87,14 +87,14 @@
 #host 127.0.0.1 www.upstream.cn
 #host 127.0.0.1 www.example.cn
 
-#curl https://www.example.cn:1444/1.txt -v --insecure
-#curl https://www.example.cn:11151/1.txt -v --insecure
+#curl https://www.example.cn:1444 -v --insecure
+#curl https://www.example.cn:11151 -v --insecure
 
-#curl https://www.example.cn:11152/1.txt -v --insecure
-#curl https://www.example.cn:11153/1.txt -v --insecure
+#curl https://www.example.cn:11152 -v --insecure
+#curl https://www.example.cn:11153 -v --insecure
 
-#curl https://www.example.cn:11154/1.txt -v --insecure
-#curl https://www.example.cn:11155/1.txt -v --insecure
+#curl https://www.example.cn:11154 -v --insecure
+#curl https://www.example.cn:11155 -v --insecure
 
-#curl https://www.example.cn:11156/1.txt -v --insecure
-#curl https://www.example.cn:11157/1.txt -v --insecure
+#curl https://www.example.cn:11156 -v --insecure
+#curl https://www.example.cn:11157 -v --insecure
