--- a/anyproxy/examples/conf/port.conf
+++ b/anyproxy/examples/conf/port.conf
@@ -17,5 +17,12 @@
         access_format = "[${local_time}] ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${upstream_addr} ${domain} ${status} ${status_str} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} [${stream_work_times}]"
         access_log_stdout = true
 
-    include ./port_18080.conf
+    include ./port_center_11131_to_tcp18080.conf
+    include ./port_edge_11132_to_tcp11131.conf
+    include ./port_edge_11133_to_quic11131.conf
+    include ./port_edge_11134_to_tunnel_tcp11131.conf
+    include ./port_edge_11135_to_tunnel_quic11131.conf
+    include ./port_edge_11136_to_tunnel2_tcp11131.conf
+    include ./port_edge_11137_to_tunnel2_quic11131.conf
+    #include ./port_18080.conf
     include ./port_1444.conf
