--- a/anyproxy/examples/conf/port_1444.conf
+++ b/anyproxy/examples/conf/port_1444.conf
@@ -86,14 +86,14 @@
 #host 127.0.0.1 www.upstream.cn
 #host 127.0.0.1 www.example.cn
 
-#curl https://www.example.cn:1444/1.txt -v --insecure
-#curl https://www.example.cn:11141/1.txt -v --insecure
+#curl https://www.example.cn:1444 -v --insecure
+#curl https://www.example.cn:11141 -v --insecure
 
-#curl https://www.example.cn:11142/1.txt -v --insecure
-#curl https://www.example.cn:11143/1.txt -v --insecure
+#curl https://www.example.cn:11142 -v --insecure
+#curl https://www.example.cn:11143 -v --insecure
 
-#curl https://www.example.cn:11144/1.txt -v --insecure
-#curl https://www.example.cn:11145/1.txt -v --insecure
+#curl https://www.example.cn:11144 -v --insecure
+#curl https://www.example.cn:11145 -v --insecure
 
-#curl https://www.example.cn:11146/1.txt -v --insecure
-#curl https://www.example.cn:11147/1.txt -v --insecure
+#curl https://www.example.cn:11146 -v --insecure
+#curl https://www.example.cn:11147 -v --insecure
