--- a/anyproxy/examples/conf/port_18080.conf
+++ b/anyproxy/examples/conf/port_18080.conf
@@ -87,16 +87,16 @@
 #host 127.0.0.1 www.upstream.cn
 #host 127.0.0.1 www.example.cn
 
-#curl http://www.example.cn:18080/1.txt -v
-#curl http://www.example.cn:11131/1.txt -v
+#curl http://www.example.cn:18080 -v
+#curl http://www.example.cn:11131 -v
 
-#curl http://www.example.cn:11132/1.txt -v
-#curl http://www.example.cn:11133/1.txt -v
+#curl http://www.example.cn:11132 -v
+#curl http://www.example.cn:11133 -v
 
-#curl http://www.example.cn:11134/1.txt -v
-#curl http://www.example.cn:11135/1.txt -v
+#curl http://www.example.cn:11134 -v
+#curl http://www.example.cn:11135 -v
 
-#curl http://www.example.cn:11136/1.txt -v
-#curl http://www.example.cn:11137/1.txt -v
+#curl http://www.example.cn:11136 -v
+#curl http://www.example.cn:11137 -v
 
 #curl http://www.example.cn:11133/big_file/CentOS-7-x86_64-DVD-1810.iso --output a
