--- a/anyproxy/examples/conf/port.conf
+++ b/anyproxy/examples/conf/port.conf
@@ -15,7 +15,7 @@
         access_log = true
         access_log_file = "./logs/access.log"
         access_format = "[${local_time}] ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${upstream_addr} ${domain} ${status} ${status_str} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} [${stream_work_times}]"
-        access_log_stdout = true
+        access_log_stdout = false
 
     include ./port_center_11131_to_tcp18080.conf
     include ./port_edge_11132_to_tcp11131.conf
