--- a/anyproxy/examples/conf/domain.conf
+++ b/anyproxy/examples/conf/domain.conf
@@ -7,14 +7,6 @@
         address = "0.0.0.0:[11150~11150]"
         ssl = {key = "./cert/example.cn.key", cert = "./cert/example.cn.crt"}
 
-    [tcp]
-        tcp_send_buffer = 0
-        tcp_recv_buffer = 0
-        tcp_nodelay = true
-
-    [quic]
-        quic_default = true
-
     [tunnel2]
         tunnel2_worker_thread = 0
         tunnel2_max_connect = 1
@@ -22,7 +14,7 @@
     [[access]]
         access_log = true
         access_log_file = "./logs/access.log"
-        access_format = "[${local_time}] ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${upstream_addr} ${domain} ${status} ${status_str} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} [${stream_work_times}]"
+        access_format = "[${local_time}] ${is_ebpf} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${upstream_addr} ${domain} ${status} ${status_str} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} [${stream_work_times}]"
         access_log_stdout = false
 
     include ./domain_1444.conf
