--- a/any-proxy/anyproxy/examples/conf/anyproxy.conf
+++ b/any-proxy/anyproxy/examples/conf/anyproxy.conf
@@ -50,21 +50,23 @@
     #reload和reinit等待流时间，时间到强制退出
     shutdown_timeout = 30    #default 30
     #是否打印配置文件数据
-    config_log_stdout = false  #是否打印配置文件 default false
+    debug_is_print_config = false  #是否打印配置文件 default false
     #最大打开文件
     max_open_file_limit = 1024000  #default unlimit
     #linux memlock_rlimit
     memlock_rlimit ={curr = 102400, max = 102400}
     #打开ebpf编译日志
-    is_open_ebpf_log = false #default false
+    debug_is_open_ebpf_log = false #default false
 
 [stream]
     #流读取缓冲区大小
-    stream_cache_size = 8192  #default 8192
+    stream_cache_size = 131072  #default 131072
     #调试用 获取每个阶段时间
-    stream_work_times = true   #default false
+    debug_is_open_stream_work_times = true   #default false
     #调试用 定时打印access_log，为0不生效
-    stream_work_debug_time = 5   #default 0
+    debug_print_access_log_time = 5   #default 0
+    #调试用 定时打印流量
+    debug_print_stream_flow_time = 1  #default 0
 
 [rate]
     #下载在这个范围内不限速，为0不生效
@@ -93,7 +95,7 @@
     #是否开启ebpf
     is_open_ebpf = false
     #是否开启带特定key值的日志
-    is_open_print = false
+    debug_is_open_print = false
     #linux 是否打开零复制sendfile
     is_open_sendfile = false
 include ./upstream.conf
