--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
@@ -35,6 +35,7 @@ upstream {
         name str = upstream1;
         #负载均衡 weight round_robin random ip_hash ip_hash_active fair
         balancer str = random;
+
         proxy_pass_tcp raw = r```
             address = "www.upstream.cn:10001"
             is_proxy_protocol_hello = true
@@ -478,6 +479,17 @@ upstream {
               is_proxy_protocol_hello = true
           ```r;
       }
+
+    server {
+        #配置名字，可以根据名字来引用配置
+        name str = upstream11;
+        #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+        balancer str = random;
+        proxy_pass_tcp raw = r```
+            address = "www.upstream.cn:10501"
+            is_proxy_protocol_hello = false
+        ```r;
+    }
 }
 
 http {
@@ -490,7 +502,7 @@ http {
             #default "./logs/access.log"
             access_log_file = "./logs/access.log"
             #default
-            access_format = "[${local_time}] ${total_read_size} ${total_write_size} ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} [${stream_work_times}]"
+            access_format = "[${local_time}] ${total_read_size} ${total_write_size} ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} [${stream_work_times}]"
             #default false
             access_log_stdout = true
     ```r;
@@ -505,6 +517,115 @@ http {
         local {
         }
     }
+
+    server {
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20031"
+        ```r;
+        proxy_pass_upstream str = "upstream1";
+        local {
+        }
+    }
+    server {
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20032"
+        ```r;
+        proxy_pass_upstream str = "upstream1";
+        local {
+        }
+    }
+    server {
+        is_open_ebpf linux_bool = true;
+        stream_cache_size  usize = 131072;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20033"
+        ```r;
+        proxy_pass_upstream str = "upstream1";
+        local {
+        }
+    }
+    server {
+        stream_cache_size  usize = 131072;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20034"
+        ```r;
+        proxy_pass_upstream str = "upstream1";
+        local {
+        }
+    }
+    server {
+        stream_cache_size  usize = 131072;
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20035"
+        ```r;
+        proxy_pass_upstream str = "upstream1";
+        local {
+        }
+    }
+    server {
+        stream_cache_size  usize = 131072;
+        download_tmp_file_size  u64= 10240000 ;#default 0  10240000
+        upload_tmp_file_size  u64= 10240000; #default 0
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20036"
+        ```r;
+        proxy_pass_upstream str = "upstream1";
+        local {
+        }
+    }
+    server {
+        stream_cache_size  usize = 131072;
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        download_tmp_file_size  u64= 10240000 ;#default 0  10240000
+        upload_tmp_file_size  u64= 10240000; #default 0
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20037"
+        ```r;
+        proxy_pass_upstream str = "upstream1";
+        local {
+        }
+    }
+    server {
+        stream_cache_size  usize = 131072;
+        download_tmp_file_size  u64= 10240000 ;#default 0  10240000
+        upload_tmp_file_size  u64= 10240000; #default 0
+        is_open_sendfile linux_bool= true;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20038"
+        ```r;
+        proxy_pass_upstream str = "upstream1";
+        local {
+        }
+    }
+    server {
+        stream_cache_size  usize = 131072;
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        download_tmp_file_size  u64= 10240000 ;#default 0  10240000
+        upload_tmp_file_size  u64= 10240000; #default 0
+        is_open_sendfile linux_bool= true;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20039"
+        ```r;
+        proxy_pass_upstream str = "upstream1";
+        local {
+        }
+    }
+
 
 #https->tcp, tcp->https
 #curl https://www.example.cn:20002 -k -v
@@ -669,6 +790,38 @@ curl -vk -H "host:www.example.cn" -H "Upgrade: websocket" -H "Sec-WebSocket-Vers
             ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
         ```r;
         proxy_pass_upstream str = "upstream10";
+        local {
+        }
+    }
+
+#http->tcp, tcp->http
+#curl http://www.example.cn:20501 -k -v
+    server {
+        #ebpf需要增大缓冲区
+        #echo 16777216 > /proc/sys/net/core/rmem_max
+        #echo 16777216 > /proc/sys/net/core/wmem_max
+        is_open_ebpf linux_bool = true;
+        is_port_direct_ebpf linux_bool = true;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+           address = "0.0.0.0:20501"
+        ```r;
+        proxy_pass_upstream str = "upstream11";
+        local {
+        }
+    }
+#http->tcp, tcp->http
+#curl http://www.example.cn:20502 -k -v
+    server {
+        #ebpf需要增大缓冲区
+        #echo 16777216 > /proc/sys/net/core/rmem_max
+        #echo 16777216 > /proc/sys/net/core/wmem_max
+        is_open_ebpf linux_bool = true;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+           address = "0.0.0.0:20502"
+        ```r;
+        proxy_pass_upstream str = "upstream11";
         local {
         }
     }
