--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
@@ -106,15 +106,7 @@ upstream {
 }
 
 http {
-    download_tmp_file_size  u64= 10240000 ;#default 0  10240000
-    upload_tmp_file_size  u64= 10240000; #default 0
-
-    upload_limit_rate      u64=102400; #default 0 102400 300000
-    download_limit_rate       u64=102400; #default 0 102400 300000
-
     debug_is_open_stream_work_times bool = true;
-    #is_open_sendfile linux_bool= true;
-    #is_open_ebpf linux_bool = true;
     access raw = r```
         #如果没有配置就继承父类的配置
         [[access]]
@@ -123,7 +115,7 @@ http {
             #default "./logs/access.log"
             access_log_file = "./logs/access.log"
             #default
-            access_format = "[${local_time}] ${total_read_size} ${total_write_size} ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} [${stream_work_times}]"
+            access_format = "[${local_time}] ${total_read_size} ${total_write_size} ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} [${stream_work_times}]"
             #default false
             access_log_stdout = true
     ```r;
@@ -132,7 +124,6 @@ http {
 #http->tcp, tcp->http
 #curl http://www.example.cn:10001 -k -v
     server {
-        stream_cache_size  usize = 131072;
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:10001"
@@ -275,7 +266,6 @@ http {
 #https(https1.0 https1.1 https2.0)->https, http->(http1.1,https1.1)
 #curl https://www.example.cn:10202 -k -v
     server {
-        stream_cache_size  usize = 0;
         domain str = "www.example.cn";
         http_server_proxy raw = r```
             #version: http1.1 http2.0 auto
@@ -346,6 +336,21 @@ curl -vk -H "host:www.example.cn" -H "Upgrade: websocket" -H "Sec-WebSocket-Vers
             ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
         ```r;
         proxy_pass_upstream str = "upstream_http_websocket";
+        local {
+        }
+    }
+
+#upstream11
+#http->tcp, tcp->http
+#curl http://www.example.cn:10501 -k -v
+    server {
+        is_open_ebpf linux_bool = true;
+        is_port_direct_ebpf linux_bool = true;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:10501"
+        ```r;
+        proxy_pass_upstream str = "upstream_tcp_http";
         local {
         }
     }
