--- a/any-proxy/examples/anyproxy/nginx/conf/nginx.conf
+++ b/any-proxy/examples/anyproxy/nginx/conf/nginx.conf
@@ -86,4 +86,23 @@ http {
             root   html;
         }
     }
+
+    server {
+        listen       19093 ssl http2;
+        #server_name  localhost;
+
+        ssl_certificate      ./cert/www.example.cn.cert.pem;
+        ssl_certificate_key  ./cert/www.example.cn.key.pem;
+
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
+
+        ssl_ciphers  HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers  on;
+
+        location / {
+            root   html;
+            index  index.html index.htm;
+        }
+    }
 }
