--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf
@@ -166,9 +166,10 @@ upstream {
 
 http {
     #流读取缓冲区大小
-    # 131072
-    stream_cache_size usize = 0;  #default 0
-    is_stream_cache_merge bool = true; #default true
+    stream_cache_size usize = 131072;  #default 131072
+    is_open_stream_cache_merge bool = true; #default true
+    is_upload_open_stream_cache bool = false; #default false
+    is_download_open_stream_cache bool = false; #default false
     #调试用 获取每个阶段时间
     debug_is_open_stream_work_times bool= true;   #default false
     #调试用 定时打印access_log，为0不生效
