--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
@@ -498,13 +498,13 @@ http {
         #如果没有配置就继承父类的配置
         [[access]]
             #default true
-            access_log = false
+            access_log = true
             #default "./logs/access.log"
             access_log_file = "./logs/access.log"
             #default
             access_format = "[${local_time}] ${total_read_size} ${total_write_size} ${write_max_block_time_ms} ${buffer_cache} ${upstream_dispatch} ${is_proxy_protocol_hello} ${is_open_ebpf} ${open_sendfile} ${local_protocol} -> ${upstream_protocol} ${request_id} ${client_addr} ${remote_addr} ${local_addr} ${upstream_addr} ${domain} ${upstream_host} ${status} ${status_str} ${is_timeout_exit} ${session_time} ${upstream_connect_time} ${client_bytes_received} ${upstream_bytes_sent} ${upstream_bytes_received} ${client_bytes_sent} ${upstream_curr_stream_size} ${upstream_max_stream_size} ${upstream_min_stream_cache_size} [${stream_work_times}]"
             #default false
-            access_log_stdout = false
+            access_log_stdout = true
     ```r;
 #http->tcp, tcp->http
 #curl http://www.example.cn:20001 -k -v
@@ -541,6 +541,8 @@ http {
     server {
         is_open_ebpf linux_bool = true;
         stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:20033"
@@ -551,6 +553,8 @@ http {
     }
     server {
         stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:20034"
@@ -561,6 +565,8 @@ http {
     }
     server {
         stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
         upload_limit_rate      u64=102400; #default 0 102400 300000
         download_limit_rate       u64=102400; #default 0 102400 300000
         domain str = "www.example.cn";
@@ -573,6 +579,8 @@ http {
     }
     server {
         stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
         download_tmp_file_size  u64= 10240000 ;#default 0  10240000
         upload_tmp_file_size  u64= 10240000; #default 0
         domain str = "www.example.cn";
@@ -585,6 +593,8 @@ http {
     }
     server {
         stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
         upload_limit_rate      u64=102400; #default 0 102400 300000
         download_limit_rate       u64=102400; #default 0 102400 300000
         download_tmp_file_size  u64= 10240000 ;#default 0  10240000
@@ -599,6 +609,8 @@ http {
     }
     server {
         stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
         download_tmp_file_size  u64= 10240000 ;#default 0  10240000
         upload_tmp_file_size  u64= 10240000; #default 0
         is_open_sendfile linux_bool= true;
@@ -612,6 +624,8 @@ http {
     }
     server {
         stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
         upload_limit_rate      u64=102400; #default 0 102400 300000
         download_limit_rate       u64=102400; #default 0 102400 300000
         download_tmp_file_size  u64= 10240000 ;#default 0  10240000
