--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf
@@ -168,6 +168,7 @@ http {
     #流读取缓冲区大小
     stream_cache_size usize = 131072;  #default 131072
     is_open_stream_cache_merge bool = true; #default true
+    open_stream_cache_merge_mil_time u64 = 100; #default 100
     is_upload_open_stream_cache bool = false; #default false
     is_download_open_stream_cache bool = false; #default false
     #调试用 获取每个阶段时间
