--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
@@ -124,6 +124,8 @@ http {
 #http->tcp, tcp->http
 #curl http://www.example.cn:10001 -k -v
     server {
+        upload_limit_rate      window_u64=102400; #default 0 102400 300000
+        download_limit_rate       window_u64=102400; #default 0 102400 300000
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:10001"
