--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
@@ -490,6 +490,50 @@ upstream {
             is_proxy_protocol_hello = false
         ```r;
     }
+    server {
+        #配置名字，可以根据名字来引用配置
+        name str = upstream12;
+        #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+        balancer str = random;
+
+        proxy_pass_tcp raw = r```
+            address = "www.upstream.cn:10005"
+            is_proxy_protocol_hello = true
+        ```r;
+        proxy_pass_ssl raw = r```
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10015"
+            is_proxy_protocol_hello = true
+        ```r;
+        proxy_pass_quic raw = r```
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10015"
+            is_proxy_protocol_hello = true
+        ```r;
+        proxy_pass_tunnel_tcp raw = r```
+            tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+            address = "www.upstream.cn:10005"
+            #heartbeat = {interval = 10, timeout = 10, fail = 3}
+            #dynamic_domain = {interval = 10}
+            is_proxy_protocol_hello = true
+        ```r;
+        proxy_pass_tunnel_ssl raw = r```
+            tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10015"
+            #heartbeat = {interval = 10, timeout = 10, fail = 3}
+            #dynamic_domain = {interval = 10}
+            is_proxy_protocol_hello = true
+        ```r;
+        proxy_pass_tunnel_quic raw = r```
+            tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+            ssl_domain= "www.example.cn"
+            address = "www.upstream.cn:10015"
+            #heartbeat = {interval = 10, timeout = 10, fail = 3}
+            #dynamic_domain = {interval = 10}
+            is_proxy_protocol_hello = true
+        ```r;
+    }
 }
 
 http {
@@ -528,8 +572,6 @@ http {
         }
     }
     server {
-        upload_limit_rate      u64=102400; #default 0 102400 300000
-        download_limit_rate       u64=102400; #default 0 102400 300000
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:20032"
@@ -539,7 +581,7 @@ http {
         }
     }
     server {
-        is_open_ebpf linux_bool = true;
+        #is_open_ebpf linux_bool = true;
         stream_cache_size  usize = 131072;
         is_upload_open_stream_cache bool = true;
         is_download_open_stream_cache bool = true;
@@ -567,8 +609,6 @@ http {
         stream_cache_size  usize = 131072;
         is_upload_open_stream_cache bool = true;
         is_download_open_stream_cache bool = true;
-        upload_limit_rate      u64=102400; #default 0 102400 300000
-        download_limit_rate       u64=102400; #default 0 102400 300000
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:20035"
@@ -595,8 +635,6 @@ http {
         stream_cache_size  usize = 131072;
         is_upload_open_stream_cache bool = true;
         is_download_open_stream_cache bool = true;
-        upload_limit_rate      u64=102400; #default 0 102400 300000
-        download_limit_rate       u64=102400; #default 0 102400 300000
         download_tmp_file_size  u64= 10240000 ;#default 0  10240000
         upload_tmp_file_size  u64= 10240000; #default 0
         domain str = "www.example.cn";
@@ -626,8 +664,6 @@ http {
         stream_cache_size  usize = 131072;
         is_upload_open_stream_cache bool = true;
         is_download_open_stream_cache bool = true;
-        upload_limit_rate      u64=102400; #default 0 102400 300000
-        download_limit_rate       u64=102400; #default 0 102400 300000
         download_tmp_file_size  u64= 10240000 ;#default 0  10240000
         upload_tmp_file_size  u64= 10240000; #default 0
         is_open_sendfile linux_bool= true;
@@ -640,6 +676,138 @@ http {
         }
     }
 
+
+    server {
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20041"
+        ```r;
+        proxy_pass_upstream str = "upstream12";
+        local {
+        }
+    }
+    server {
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20042"
+        ```r;
+        proxy_pass_upstream str = "upstream12";
+        local {
+        }
+    }
+    server {
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        #is_open_ebpf linux_bool = true;
+        stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20043"
+        ```r;
+        proxy_pass_upstream str = "upstream12";
+        local {
+        }
+    }
+    server {
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20044"
+        ```r;
+        proxy_pass_upstream str = "upstream12";
+        local {
+        }
+    }
+    server {
+        stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20045"
+        ```r;
+        proxy_pass_upstream str = "upstream12";
+        local {
+        }
+    }
+    server {
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
+        download_tmp_file_size  u64= 10240000 ;#default 0  10240000
+        upload_tmp_file_size  u64= 10240000; #default 0
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20046"
+        ```r;
+        proxy_pass_upstream str = "upstream12";
+        local {
+        }
+    }
+    server {
+        stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        download_tmp_file_size  u64= 10240000 ;#default 0  10240000
+        upload_tmp_file_size  u64= 10240000; #default 0
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20047"
+        ```r;
+        proxy_pass_upstream str = "upstream12";
+        local {
+        }
+    }
+    server {
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
+        download_tmp_file_size  u64= 10240000 ;#default 0  10240000
+        upload_tmp_file_size  u64= 10240000; #default 0
+        is_open_sendfile linux_bool= true;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20048"
+        ```r;
+        proxy_pass_upstream str = "upstream12";
+        local {
+        }
+    }
+    server {
+        stream_cache_size  usize = 131072;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        download_tmp_file_size  u64= 10240000 ;#default 0  10240000
+        upload_tmp_file_size  u64= 10240000; #default 0
+        is_open_sendfile linux_bool= true;
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:20049"
+        ```r;
+        proxy_pass_upstream str = "upstream12";
+        local {
+        }
+    }
 
 #https->tcp, tcp->https
 #curl https://www.example.cn:20002 -k -v
