--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
@@ -124,8 +124,6 @@ http {
 #http->tcp, tcp->http
 #curl http://www.example.cn:10001 -k -v
     server {
-        upload_limit_rate      window_u64=102400; #default 0 102400 300000
-        download_limit_rate       window_u64=102400; #default 0 102400 300000
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:10001"
@@ -351,6 +349,29 @@ curl -vk -H "host:www.example.cn" -H "Upgrade: websocket" -H "Sec-WebSocket-Vers
         domain str = "www.example.cn";
         port_listen_tcp raw = r```
             address = "0.0.0.0:10501"
+        ```r;
+        proxy_pass_upstream str = "upstream_tcp_http";
+        local {
+        }
+    }
+
+#upstream12
+#http->tcp, tcp->http
+#curl http://www.example.cn:10005 -k -v
+    server {
+        upload_limit_rate      u64=102400; #default 0 102400 300000
+        download_limit_rate       u64=102400; #default 0 102400 300000
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:10005"
+        ```r;
+        port_listen_ssl raw = r```
+            address = "0.0.0.0:10015"
+            ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem", ssl_domain = "www.example.cn"}
+        ```r;
+        port_listen_quic raw = r```
+            address = "0.0.0.0:10015"
+            ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem", ssl_domain = "www.example.cn"}
         ```r;
         proxy_pass_upstream str = "upstream_tcp_http";
         local {
