--- a/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
+++ b/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
@@ -377,6 +377,18 @@ curl -vk -H "host:www.example.cn" -H "Upgrade: websocket" -H "Sec-WebSocket-Vers
         local {
         }
     }
+#upstream13 upstream14  upstream15
+#http->tcp, tcp->http
+#curl http://www.example.cn:10006 -k -v
+    server {
+        domain str = "www.example.cn";
+        port_listen_tcp raw = r```
+            address = "0.0.0.0:10006"
+        ```r;
+        proxy_pass_upstream str = "upstream_tcp_http";
+        local {
+        }
+    }
 }
 
 
